force-app/main/default/objects/B2B_ParameterSchedule__c/B2B_ParameterSchedule__c.object-meta.xml
<CustomObject>
    <description>用以管理參數自動更新之排程</description>
    <label>B2B Parameter Schedule</label>
    <nameField>
        <displayFormat>SED-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Parameter Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>