force-app/main/default/objects/B2B_ParameterSchedule__c/fields/B2B_Parameter__c.field-meta.xml
<CustomField>
    <fullName>B2B_Parameter__c</fullName>
    <label>B2B Parameter</label>
    <referenceTo>B2B_Parameter__c</referenceTo>
    <relationshipName>B2B_ParameterSchedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>