force-app/main/default/objects/B2B_ParameterSchedule__c/fields/IsUpdated__c.field-meta.xml
<CustomField>
    <fullName>IsUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>由Flow更新</description>
    <label>Is Updated</label>
    <type>Checkbox</type>
</CustomField>