force-app/main/default/objects/B2B_ParameterSchedule__c/fields/ScheduleDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduleDate__c</fullName>
    <defaultValue>TODAY()+1</defaultValue>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>